--- a/src/home-02.html
+++ b/src/home-02.html
@@ -7,7 +7,75 @@
 		<div class="wrapper">
 			@@include('html/_header-02.htm',{})
 			<main class="page">
-            VPNLandingPages-02
+
+            
+            <section class="page__support support">
+               <div class="support__container">
+                  <div class="support__inner">
+                     <div class="support__row">
+                        <div class="support__column support__column_01">
+                           <div class="support__card">
+                              <div class="support__title">WE VALUE YOUR PRIVACY</div>
+                              <div class="support__text">
+                                 <p>
+                                    Your information provided is solely used by PrivateSurf VPN
+                                    for the use of a virtual private network.
+                                    We will not sell your information to any other party.
+                                 </p>
+                              </div>
+                           </div>
+                        </div>
+   
+                        <div class="support__column support__column_02">
+                           <div class="support__card">
+                              <div class="support__title">CUSTOMER SUPPORT</div>
+                              <div class="support__text">
+                                 <p>
+                                    Our technical support team is ready to answer questions.
+                                    You can contact them at cs@surfingvpn.com
+                                 </p>
+                              </div>
+                           </div>
+                        </div>
+   
+                        <div class="support__column support__column_03">
+                           <div class="support__card">
+                              <div class="support__title">YOUR SATISFACTION IS OUR PRIORITY</div>
+                              <div class="support__text">
+                                 <p>
+                                    If you are in any way unhappy with the quality of our service
+                                    or product please contact us. We are here to help you.
+                                 </p>
+                              </div>
+                           </div>
+                        </div>
+   
+                        <div class="support__column support__column_04">
+                           <div class="support__card">
+                              <div class="support__title">WHAT ARE THE BENEFITS OF A VPN?</div>
+                              <div class="support__text">
+                                 <p>
+                                    With PrivateSurf VPN you can access content from different
+                                    countries, which would not neccessarily be available in your
+                                    country. Also with a VPN you can hide your online presence
+                                    to secure your daily internet activity
+                                 </p>
+                              </div>
+                           </div>
+                        </div>
+                     </div>
+   
+                     <div class="support__conditions">
+                        <ul class="support__items">
+                           <li>Privacy Policy</li>
+                           <li>Terms and conditions</li>
+                           <li>Contact</li>
+                           <li>How to uninstall</li>
+                        </ul>
+                     </div>
+                  </div>
+               </div>
+            </section>
 			</main>
 			@@include('html/_footer.htm',{})
 		</div>
