abybim section protection

--- a/src/home-01.html
+++ b/src/home-01.html
@@ -9,6 +9,24 @@
       @@include('html/_header-01.htm',{})
       <main class="page">
 
+         <section class="page__why-use why-use">
+            <div class="why-use__container">
+               <div class="why-use__inner">
+                  <div class="why-use__title title">
+                     WHY USE A VPN?
+                  </div>
+                  <div class="why-use__desc">
+                     <p>
+                        Using the internet these days is more daunting than ever, with many types of cyberthreats. There
+                        is only one true way to use the internet privately, and that is with a VPN or Virtual Private
+                        Network. Whether you want to watch region-specific content or create a secure home office
+                        environment, VPNs can be more useful now than ever.
+                     </p>
+                  </div>
+               </div>
+            </div>
+         </section>
+
          <section class="page__features features">
             <div class="features__container">
                <div class="features__inner">
@@ -26,18 +44,18 @@
                               <!--создаем саму карточку flex-элемент-->
                               <div class="card__image">
                                  <img src="@img/features/icon-01.svg" alt="" class="card__icon">
-                              </div> 
+                              </div>
                               <div class="card__text">Browse privately</div>
                            </div>
                         </div>
-                        
+
                         <div class="card__column">
                            <!--колонки-->
                            <div class="card__item">
                               <!--создаем саму карточку flex-элемент-->
                               <div class="card__image">
                                  <img src="@img/features/icon-02.svg" alt="" class="card__icon">
-                              </div> 
+                              </div>
                               <div class="card__text">Bypass</div>
                            </div>
                         </div>
@@ -48,7 +66,7 @@
                               <!--создаем саму карточку flex-элемент-->
                               <div class="card__image">
                                  <img src="@img/features/icon-03.svg" alt="" class="card__icon">
-                              </div> 
+                              </div>
                               <div class="card__text">Clean web</div>
                            </div>
                         </div>
@@ -59,7 +77,7 @@
                               <!--создаем саму карточку flex-элемент-->
                               <div class="card__image">
                                  <img src="@img/features/icon-04.svg" alt="" class="card__icon">
-                              </div> 
+                              </div>
                               <div class="card__text">No logging</div>
                            </div>
                         </div>
@@ -70,7 +88,7 @@
                               <!--создаем саму карточку flex-элемент-->
                               <div class="card__image">
                                  <img src="@img/features/icon-05.svg" alt="" class="card__icon">
-                              </div> 
+                              </div>
                               <div class="card__text">Encryption</div>
                            </div>
                         </div>
@@ -81,15 +99,106 @@
                               <!--создаем саму карточку flex-элемент-->
                               <div class="card__image">
                                  <img src="@img/features/icon-06.svg" alt="" class="card__icon">
-                              </div> 
+                              </div>
                               <div class="card__text">Kill switch</div>
                            </div>
                         </div>
-                        
+
                      </div>
                   </div>
 
-               </div>             
+               </div>
+            </div>
+         </section>
+
+         <section class="page__steps steps">
+            <div class="steps__container">
+               <div class="steps__inner">
+                  <h2 class="steps__title title">
+                     <span>PRIVACY AND PROTECTION</span> IN THREE STEPS
+                  </h2>
+
+                  <div class="steps__body-card card-steps">
+                     <!--блок для ограничения ширины в 1300px-->
+                     <div class="card-steps__row">
+                        <!--будущий flex-контейнер-->
+                        <div class="card-steps__column">
+                           <!--колонки-->
+                           <div class="card-steps__item">
+                              <!--создаем саму карточку flex-элемент-->
+                              <div class="card-steps__image">
+                                 <img src="@img/steps/01.svg" alt="" class="card-steps__icon">
+                              </div>
+                              <div class="card-steps__text">1. DOWNLOAD</div>
+                           </div>
+                        </div>
+
+                        <div class="card-steps__column">
+                           <!--колонки-->
+                           <div class="card-steps__item">
+                              <!--создаем саму карточку flex-элемент-->
+                              <div class="card-steps__image">
+                                 <img src="@img/steps/02.svg" alt="" class="card-steps__icon">
+                              </div>
+                              <div class="card-steps__text">2.SELECT SERVER</div>
+                           </div>
+                        </div>
+
+                        <div class="card-steps__column">
+                           <!--колонки-->
+                           <div class="card-steps__item">
+                              <!--создаем саму карточку flex-элемент-->
+                              <div class="card-steps__image">
+                                 <img src="@img/steps/03.svg" alt="" class="card-steps__icon">
+                              </div>
+                              <div class="card-steps__text">3.ACTIVATE & GO!</div>
+                           </div>
+                        </div>
+
+                     </div>
+                  </div>
+
+               </div>
+            </div>
+         </section>
+
+         <section class="page__section protection">
+            <div class="protection__title title">
+               <span>PROTECT</span> ALL YOUR DEVICES
+            </div>
+            <div class="protection__container">
+               <div class="protection__design design">
+                  <div class="design__subtitle">
+                     PRIVATESURF VPN IS AN APPLICATION DESIGNED FOR YOU:
+                  </div>
+
+                  <div class="design__offers">
+                     <ul class="design__items">
+                        <li class="design__item">
+                           <img src="@img/protection/birdie.svg" alt="birdie">
+                           <p>Use PrivateSurf VPN on every device</p>
+                        </li>
+                        <li class="design__item">
+                           <img src="@img/protection/birdie.svg" alt="birdie">
+                           <p>One click to a safer internet</p>
+                        </li>
+                        <li class="design__item">
+                           <img src="@img/protection/birdie.svg" alt="birdie">
+                           <p>Secure access, worldwide</p>
+                        </li>
+                        <li class="design__item">
+                           <img src="@img/protection/birdie.svg" alt="birdie">
+                           <p>Stronger data protection</p>
+                        </li>
+                     </ul>
+                  </div>
+
+                  <a class="design__btn" href="#">GET STARTED</a>
+               </div>
+
+               <div class="protection__image">
+                  <img src="@img/protection/image.svg" alt="Image">
+               </div>
             </div>
          </section>
 
