finish section why-use

--- a/src/home-01.html
+++ b/src/home-01.html
@@ -9,8 +9,87 @@
       @@include('html/_header-01.htm',{})
       <main class="page">
 
+         <section class="page__section screen-11">
+            <div class="screen-11__container">
+               <div class="secure__info info">
+                  <div class="info__title title">
+                     SECURE YOUR DIGITAL LIFE
+                  </div>
+                  <div class="info__text">
+                     Browse the web safely & privately
+                  </div>
+                  <div class="info__box">
+                     <div class="info__subtitle">
+                        PROTECT ALL YOUR DEVICES
+                     </div>
+                     <div class="info__image">
+                        <img src="@img/secure/arrow.svg" alt="Image">
+                     </div>
+                     <a class="info__btn btn" href="#">DOWNLOAD NOW</a>
+                     <div class="info__license">
+                        *Buy Trial License for USD1, EUR1, GBP1
+                     </div>
+                  </div>
+               </div>
+               <div class="screen-11__image">
+                  <img src="@img/secure/image01.svg" alt="Image">
+               </div>
+            </div>
+         </section>
+
+         <section class="page__secure secure">
+            <div class="secure__container">
+               <div class="secure__inner">
+                  <div class="secure__image">
+                     <img src="@img/secure/image01.svg" alt="Image">
+                  </div>
+                  <div class="secure__info info">
+                     <div class="info__title title">
+                        SECURE YOUR DIGITAL LIFE
+                     </div>
+                     <div class="info__text">
+                        Browse the web safely & privately
+                     </div>
+                     <div class="info__box">
+                        <div class="info__subtitle">
+                           PROTECT ALL YOUR DEVICES
+                        </div>
+                        <div class="info__image">
+                           <img src="@img/secure/arrow.svg" alt="Image">
+                        </div>
+                        <a class="info__btn btn" href="#">DOWNLOAD NOW</a>
+                        <div class="info__license">
+                           *Buy Trial License for USD1, EUR1, GBP1
+                        </div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </section>         
+
          <section class="page__why-use why-use">
             <div class="why-use__container">
+               <div class="why-use__offers">
+                  <ul class="why-use__items">
+                     <li class="why-use__item">
+                        <img src="@img/why-use/birdie.svg" alt="birdie">
+                        <p>HIGH SPEED</p>
+                     </li>
+                     <li class="why-use__item">
+                        <img src="@img/why-use/birdie.svg" alt="birdie">
+                        <p>UNLIMITED DEVICES</p>
+                     </li>
+                     <li class="why-use__item">
+                        <img src="@img/why-use/birdie.svg" alt="birdie">
+                        <p>HIGHLY SECURE</p>
+                     </li>
+                     <li class="why-use__item">
+                        <img src="@img/why-use/birdie.svg" alt="birdie">
+                        <p>QUICK CONNECTIVITY</p>
+                     </li>
+                  </ul>
+               </div>
+
                <div class="why-use__inner">
                   <div class="why-use__title title">
                      WHY USE A VPN?
@@ -193,7 +272,7 @@
                      </ul>
                   </div>
 
-                  <a class="design__btn" href="#">GET STARTED</a>
+                  <a class="design__btn btn" href="#">GET STARTED</a>
                </div>
 
                <div class="protection__image">
