--- a/src/home-01.html
+++ b/src/home-01.html
@@ -9,8 +9,8 @@
       @@include('html/_header-01.htm',{})
       <main class="page">
 
-         <section class="page__section screen-11">
-            <div class="screen-11__container">
+         <section class="page__section secure">
+            <div class="secure__container">
                <div class="secure__info info">
                   <div class="info__title title">
                      SECURE YOUR DIGITAL LIFE
@@ -25,47 +25,20 @@
                      <div class="info__image">
                         <img src="@img/secure/arrow.svg" alt="Image">
                      </div>
-                     <a class="info__btn btn" href="#">DOWNLOAD NOW</a>
+                     <div class="info__button">
+                        <a class="info__btn btn" href="#">DOWNLOAD NOW</a>
+                     </div>
                      <div class="info__license">
                         *Buy Trial License for USD1, EUR1, GBP1
                      </div>
                   </div>
                </div>
-               <div class="screen-11__image">
+
+               <div class="secure__image">
                   <img src="@img/secure/image01.svg" alt="Image">
                </div>
             </div>
          </section>
-
-         <section class="page__secure secure">
-            <div class="secure__container">
-               <div class="secure__inner">
-                  <div class="secure__image">
-                     <img src="@img/secure/image01.svg" alt="Image">
-                  </div>
-                  <div class="secure__info info">
-                     <div class="info__title title">
-                        SECURE YOUR DIGITAL LIFE
-                     </div>
-                     <div class="info__text">
-                        Browse the web safely & privately
-                     </div>
-                     <div class="info__box">
-                        <div class="info__subtitle">
-                           PROTECT ALL YOUR DEVICES
-                        </div>
-                        <div class="info__image">
-                           <img src="@img/secure/arrow.svg" alt="Image">
-                        </div>
-                        <a class="info__btn btn" href="#">DOWNLOAD NOW</a>
-                        <div class="info__license">
-                           *Buy Trial License for USD1, EUR1, GBP1
-                        </div>
-                     </div>
-                  </div>
-               </div>
-            </div>
-         </section>         
 
          <section class="page__why-use why-use">
             <div class="why-use__container">
