finish section contact

--- a/src/home-01.html
+++ b/src/home-01.html
@@ -9,7 +9,20 @@
       @@include('html/_header-01.htm',{})
       <main class="page">
 
-         <section class="page__section secure">
+         <section class="page__contact contact">
+            <div class="contact__container">
+               <div class="contact__inner">
+                  <div class="contact__mail">
+                     Email: cs@surfingvpn.com
+                  </div>
+                  <div class="contact__support">
+                     Customer Support: +31205231052
+                  </div>
+               </div>               
+            </div>
+         </section>   
+
+         <section class="page__secure secure">
             <div class="secure__container">
                <div class="secure__info info">
                   <div class="info__title title">
@@ -214,7 +227,7 @@
             </div>
          </section>
 
-         <section class="page__section protection">
+         <section class="page__protection protection">
             <div class="protection__title title">
                <span>PROTECT</span> ALL YOUR DEVICES
             </div>
