--- a/src/html/_header-01.htm
+++ b/src/html/_header-01.htm
@@ -1,4 +1,12 @@
 <header class="header">
 	<div class="header__container">
+      <div class="header__inner">
+         <div class="header__image">
+            <img src="@img/header/logo.svg" alt="logo">
+         </div>
+         <div class="header__button">
+            <a class="header__btn" href="#">CANCEL MY MEMBERSHIP</a>
+         </div>
+      </div>  
 	</div>
 </header>
