finish section protection-03

--- a/src/home-02.html
+++ b/src/home-02.html
@@ -7,7 +7,9 @@
 		<div class="wrapper">
 			@@include('html/_header-02.htm',{})
 			<main class="page">
-
+            <div class="proba__title _icon-berdle">
+              <p class="_icon-logo">PROTECT ALL YOUR DEVICES</p> 
+            </div>
             
             <section class="page__support support">
                <div class="support__container">
@@ -77,7 +79,7 @@
                </div>
             </section>
 			</main>
-			@@include('html/_footer.htm',{})
+			@@include('html/_footer-02.htm',{})
 		</div>
 		@@include('html/_js.htm',{})
 	</body>
