--- a/src/home-01.html
+++ b/src/home-01.html
@@ -335,7 +335,7 @@
             </div>
          </section>
       </main>
-      @@include('html/_footer.htm',{})
+      @@include('html/_footer-01.htm',{})
    </div>
    @@include('html/_js.htm',{})
 </body>
