--- a/src/home-03.html
+++ b/src/home-03.html
@@ -8,6 +8,45 @@
 			@@include('html/_header-03.htm',{})
 			<main class="page">
 
+         <section class="page__protection-03 protection-03">
+            <div class="protection-03__title title">
+               PROTECTALL YOUR DEVICES
+            </div>
+            <div class="protection-03__container">
+               <div class="protection-03__design-03 design-03">
+                  <div class="design-03__subtitle">
+                     PRIVATESURF VPN IS AN APPLICATION DESIGNED FOR YOU:
+                  </div>
+
+                  <div class="design-03__offers">
+                     <ul class="design-03__items">
+                        <li class="design-03__item">
+                           <img src="@img/protection/birdie-03.svg" alt="birdie">
+                           <p>Use PrivateSurf VPN on every device</p>
+                        </li>
+                        <li class="design-03__item">
+                           <img src="@img/protection/birdie-03.svg" alt="birdie">
+                           <p>One click to a safer internet</p>
+                        </li>
+                        <li class="design-03__item">
+                           <img src="@img/protection/birdie-03.svg" alt="birdie">
+                           <p>Secure access, worldwide</p>
+                        </li>
+                        <li class="design-03__item">
+                           <img src="@img/protection/birdie-03.svg" alt="birdie">
+                           <p>Stronger data protection</p>
+                        </li>
+                     </ul>
+                  </div>
+
+                  <a class="design-03__btn-03 btn-03" href="#">GET STARTED</a>
+               </div>
+
+               <div class="protection-03__image">
+                  <img src="@img/protection/image-03.jpg" alt="Image">
+               </div>
+            </div>
+         </section>
             
             <section class="page__support support">
                <div class="support__container">
@@ -77,7 +116,7 @@
                </div>
             </section>
 			</main>
-			@@include('html/_footer.htm',{})
+			@@include('html/_footer-03.htm',{})
 		</div>
 		@@include('html/_js.htm',{})
 	</body>
