--- a/src/html/_footer-02.htm
+++ b/src/html/_footer-02.htm
@@ -1,6 +1,6 @@
-<footer class="footer">
-   <div class="footer__container">
-      <div class="footer__address">
+<footer class="footer-02">
+   <div class="footer-02__container">
+      <div class="footer-02__address">
          <p>
             Pay So B.V., Markerkant 13, 1314AN LK Almere, The Netherlands
             Number: +31205231052
